All selected layers are now sorted together. Fixed bug with selection frame and scrollbar.

--- a/jbb_layers_panel/css/layerspanel.css
+++ b/jbb_layers_panel/css/layerspanel.css
@@ -299,12 +299,16 @@ width: 200%;
 margin: -20px;
 }
 
-#layers {
+#layersContainer2 {
 height: 100%;
 width: 50%;
-overflow-y: scroll;
 margin: 20px;
 padding: 0 0 30px 0;
+overflow-y: scroll;
+}
+
+#layers {
+height: 100%;
 }
 
 a{
